# imgui-examples

./: .gitignore  CMakePresets.json  README.md
cmake/: CompilerWarnings.cmake  StaticAnalyzers.cmake
src/: CMakeLists.txt
src/app/: CMakeLists.txt
src/app/App/: Main.cpp
src/app/Manifests/: App.manifest
src/camera/: CMakeLists.txt
src/camera/Camera/: Camera.cpp  Camera.h  ICamera.h
src/camera/Camera/src/: Camera.cpp  Camera.h
src/core/: CMakeLists.txt
src/core/Core/: AppEvents.h  AppModel.cpp  AppModel.h  AppUi.cpp  AppUi.h  Application.cpp  Application.hpp  DPIHandler.hpp  DataModel.h  DpiHandler.cpp  DpiHandler.h  EventBus.h  EventBusImpl.h  FrameContext.h  IDataModel.h  IPathService.h  ImGuiConfig.h  ImGuiPass.cpp  ImGuiPass.h  InputSystem.cpp  InputSystem.h  Log.cpp  Log.hpp  Renderer.cpp  Renderer.h  Resources.hpp  SDLContext.cpp  SDLContext.h  SdlCameraTexture.cpp  SdlCameraTexture.h  SdlContext.cpp  SdlContext.h  SdlEventTranslator.cpp  SdlEventTranslator.h  SdlPathService.cpp  SdlPathService.h  SdlRenderer.cpp  SdlRenderer.h  SdlUtils.cpp  SdlUtils.h  (+5 more)
src/core/Platform/Linux/: DPIHandler.cpp  Resources.cpp
src/core/Platform/Mac/: DPIHandler.cpp  Resources.cpp
src/core/Platform/Windows/: DPIHandler.cpp  Resources.cpp
src/core/Tests/: CMakeLists.txt  EventBusTest.cpp  Resources.spec.cpp
src/events/: CMakeLists.txt
src/image/: CMakeLists.txt
src/image/Image/: IImageData.h
src/image/Image/src/: ImageData.cpp  ImageData.h
src/settings/Settings/: Project.hpp
src/tests/: CMakeLists.txt  test_01.cpp
src/traceLog/: CMakeLists.txt
src/traceLog/TraceLog/: Log.cpp  Log.hpp  Tracy.hpp
